[package]
name = "single-thread-async-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.95"
tokio-util = "0.7.13"
ctrlc = "3.4.5"

[dev-dependencies]
regex = "1.11.1"
